[*] Kafka 주석 처리

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 	implementation 'org.springframework.session:spring-session-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.1'
-	implementation 'org.springframework.kafka:spring-kafka'
+//	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'com.google.code.gson:gson'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
