--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -28,47 +28,47 @@ services:
     networks:
       - app-network
 
-  # zookeeper
-  zookeeper:
-    image: confluentinc/cp-zookeeper
-    container_name: hgcq-zookeeper
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    ports:
-      - "2181:2181"
-    networks:
-      - app-network
-    healthcheck:
-      test: [ "CMD", "echo", "ruok | nc localhost 2181 | grep imok" ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+#  # zookeeper
+#  zookeeper:
+#    image: confluentinc/cp-zookeeper
+#    container_name: hgcq-zookeeper
+#    environment:
+#      ZOOKEEPER_CLIENT_PORT: 2181
+#      ZOOKEEPER_TICK_TIME: 2000
+#    ports:
+#      - "2181:2181"
+#    networks:
+#      - app-network
+#    healthcheck:
+#      test: [ "CMD", "echo", "ruok | nc localhost 2181 | grep imok" ]
+#      interval: 10s
+#      timeout: 5s
+#      retries: 5
 
-  # kafka
-  kafka:
-    image: confluentinc/cp-kafka
-    container_name: hgcq-kafka
-    depends_on:
-      zookeeper:
-        condition: service_healthy
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    ports:
-      - "9092:9092"
-    volumes:
-      - kafka-data:/var/lib/kafka/data
-    networks:
-      - app-network
-    healthcheck:
-      test: [ "CMD", "kafka-topics", "--bootstrap-server", "localhost:9092", "--list" ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+#  # kafka
+#  kafka:
+#    image: confluentinc/cp-kafka
+#    container_name: hgcq-kafka
+#    depends_on:
+#      zookeeper:
+#        condition: service_healthy
+#    environment:
+#      KAFKA_BROKER_ID: 1
+#      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+#      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+#      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+#      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+#    ports:
+#      - "9092:9092"
+#    volumes:
+#      - kafka-data:/var/lib/kafka/data
+#    networks:
+#      - app-network
+#    healthcheck:
+#      test: [ "CMD", "kafka-topics", "--bootstrap-server", "localhost:9092", "--list" ]
+#      interval: 10s
+#      timeout: 5s
+#      retries: 5
 
   # spring boot
   app:
@@ -80,7 +80,7 @@ services:
     depends_on:
       - mysql
       - redis
-      - kafka
+#      - kafka
     ports:
       - "8080:8080"
     env_file:
@@ -91,7 +91,7 @@ services:
       SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASSWORD}
       SPRING_REDIS_HOST: redis
       SPRING_REDIS_PORT: 6379
-      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:29092
+#      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:29092
     networks:
       - app-network
 
